--- a/dnamap/map1.html
+++ b/dnamap/map1.html
@@ -346,8 +346,20 @@ p {
         //it's important to add an load event listener to the object, as it will load the svg doc asynchronously
 
         var pie = Raphael(document.getElementById("pie"));
-        var pc1 = pie.piechart(590,250,15,[1,2,3,4],{
-colors: ["#1BE050","#E04C1B","#D61BE0","#E67A1C"],
+        var pc1 = pie.piechart(590,250,15,[150,20,774,56],{
+            colors: ["#D61BE0","#E67A1C","#1BE050","#E04C1B"],
+        });
+        var pc2 = pie.piechart(330,266,15,[326,88,550,36],{
+            colors: ["#D61BE0","#E67A1C","#1BE050","#E04C1B"],
+        });
+        var pc3 = pie.piechart(560,150,15,[10,4,970,19],{
+            colors: ["#D61BE0","#E67A1C","#1BE050","#E04C1B"],
+        });
+        var pc4 = pie.piechart(505,150,15,[7,17,964,12],{
+            colors: ["#D61BE0","#E67A1C","#1BE050","#E04C1B"],
+        });
+        var pc5 = pie.piechart(490,110,15,[12,43,938,8],{
+            colors: ["#D61BE0","#E67A1C","#1BE050","#E04C1B"],
         });
 
            </script>
