--- a/dnamap/map1.html
+++ b/dnamap/map1.html
@@ -346,19 +346,31 @@ p {
         //it's important to add an load event listener to the object, as it will load the svg doc asynchronously
 
         var pie = Raphael(document.getElementById("pie"));
-        var pc1 = pie.piechart(590,250,15,[150,20,774,56],{
+        var pc1 = pie.piechart(590,250,10,[150,20,774,56],{
             colors: ["#D61BE0","#E67A1C","#1BE050","#E04C1B"],
         });
-        var pc2 = pie.piechart(330,266,15,[326,88,550,36],{
+        var pc2 = pie.piechart(330,266,10,[326,88,550,36],{
             colors: ["#D61BE0","#E67A1C","#1BE050","#E04C1B"],
         });
-        var pc3 = pie.piechart(560,150,15,[10,4,970,19],{
+        var pc3 = pie.piechart(560,150,10,[10,4,970,19],{
             colors: ["#D61BE0","#E67A1C","#1BE050","#E04C1B"],
         });
-        var pc4 = pie.piechart(505,150,15,[7,17,964,12],{
+        var pc4 = pie.piechart(505,150,10,[7,17,964,12],{
             colors: ["#D61BE0","#E67A1C","#1BE050","#E04C1B"],
         });
-        var pc5 = pie.piechart(490,110,15,[12,43,938,8],{
+        var pc5 = pie.piechart(490,110,10,[12,43,938,8],{
+            colors: ["#D61BE0","#E67A1C","#1BE050","#E04C1B"],
+        });
+        var pc6 = pie.piechart(590,200,10,[48,47,904,17],{
+            colors: ["#D61BE0","#E67A1C","#1BE050","#E04C1B"],
+        });
+        var pc7 = pie.piechart(498,203,10,[66,107,788,40],{
+            colors: ["#D61BE0","#E67A1C","#1BE050","#E04C1B"],
+        });
+        var pc8 = pie.piechart(528,205,10,[23,39,930,8],{
+            colors: ["#D61BE0","#E67A1C","#1BE050","#E04C1B"],
+        });
+        var pc9 = pie.piechart(570,205,10,[23,73,868,27],{
             colors: ["#D61BE0","#E67A1C","#1BE050","#E04C1B"],
         });
 
