--- a/dnamap/map1.html
+++ b/dnamap/map1.html
@@ -373,6 +373,18 @@ p {
         var pc9 = pie.piechart(570,205,10,[23,73,868,27],{
             colors: ["#D61BE0","#E67A1C","#1BE050","#E04C1B"],
         });
+        var pc10 = pie.piechart(620,210,10,[32,51,853,73],{
+            colors: ["#D61BE0","#E67A1C","#1BE050","#E04C1B"],
+        });
+        var pc11 = pie.piechart(560,180,10,[47,66,868,20],{
+            colors: ["#D61BE0","#E67A1C","#1BE050","#E04C1B"],
+        });
+        var pc12 = pie.piechart(640,240,10,[108,26,820,45],{
+            colors: ["#D61BE0","#E67A1C","#1BE050","#E04C1B"],
+        });
+        var pc13 = pie.piechart(730,280,10,[51,91,589,269],{
+            colors: ["#D61BE0","#E67A1C","#1BE050","#E04C1B"],
+        });
 
            </script>
   </body>
