--- a/dnamap/map1.html
+++ b/dnamap/map1.html
@@ -426,6 +426,29 @@ p {
         //mexican
         var pc18 = pie.piechart(270,260,10,[56,468,432,44],{
             colors: [americaColor,europeColor,africaColor,australasiaColor],
+            });
+
+
+        var pc = pie.piechart(130,360,75,vals,{
+colors: [europeColor,americaColor,africaColor,australasiaColor],
+legend: ["Africa","Americas","Europe","Australasia"],
+        });
+        pc.hover(function () {
+            this.sector.stop();
+            this.sector.scale(1.1,1.1,this.cx,this.cy);
+
+            if (this.label) {
+                this.label[0].stop();
+                this.label[0].attr({r:7.5});
+                this.label[1].attr({"font-weight":800});
+            }
+        },function() {
+            this.sector.animate({transform: 's1 1 ' + this.cx + ' ' + this.cy
+                },500, "bounce");
+            if (this.label) {
+                this.label[0].animate({r:5},500,"bounce");
+                this.label[1].attr({"font-weight":400});
+            }
         });
 
            </script>
