--- a/dnamap/map1.html
+++ b/dnamap/map1.html
@@ -349,85 +349,87 @@ p {
         var australasiaColor = "#E67A1C";
 
         //it's important to add an load event listener to the object, as it will load the svg doc asynchronously
-
         var pie = Raphael(document.getElementById("pie"));
-        //north african
-        var pc1 = pie.piechart(590,250,10,[150,20,774,56],{
-            colors: [europeColor,africaColor,australasiaColor,americaColor],
-        });
-        //puerto rican
-        var pc2 = pie.piechart(330,266,10,[326,88,550,36],{
-            colors: [europeColor,africaColor,americaColor,australasiaColor],
-        });
-        //north euro
-        var pc3 = pie.piechart(560,150,10,[10,4,970,19],{
-            colors: [europeColor,australasiaColor,africaColor,americaColor],
-        });
-        //irish
-        var pc4 = pie.piechart(505,150,10,[7,17,964,12],{
-            colors: [europeColor,americaColor,australasiaColor,africaColor],
-        });
-        //icelandic
-        var pc5 = pie.piechart(490,110,10,[12,43,938,8],{
-            colors: [europeColor,americaColor,africaColor,australasiaColor],
-        });
-        //greek
-        var pc6 = pie.piechart(590,200,10,[48,47,904,17],{
-            colors: [europeColor,africaColor,americaColor,australasiaColor],
-        });
-        //iberians
-        var pc7 = pie.piechart(498,203,10,[66,107,788,40],{
-            colors: [europeColor,americaColor,africaColor,australasiaColor],
-        });
-        //basque
-        var pc8 = pie.piechart(528,205,10,[23,39,930,8],{
-            colors: [europeColor,americaColor,africaColor,australasiaColor],
-        });
-        //italian
-        var pc9 = pie.piechart(570,205,10,[23,73,868,27],{
-            colors: [europeColor,americaColor,australasiaColor,africaColor],
-        });
-        //turkish
-        var pc10 = pie.piechart(620,210,10,[32,51,853,73],{
-            colors: [europeColor,australasiaColor,americaColor,africaColor],
-        });
-        //ashkenazi
-        var pc11 = pie.piechart(560,180,10,[47,66,868,20],{
-            colors: [europeColor,americaColor,africaColor,australasiaColor],
-        });
-        //mid east
-        var pc12 = pie.piechart(640,240,10,[108,26,820,45],{
-            colors: [europeColor,africaColor,australasiaColor,americaColor],
-        });
-        //south asian indian
-        var pc13 = pie.piechart(730,280,10,[51,91,589,269],{
-            colors: [europeColor,australasiaColor,americaColor,africaColor],
-        });
-        //chinese
-        var pc14 = pie.piechart(800,230,10,[0,13,7,980],{
-            colors: [australasiaColor,americaColor,europeColor,africaColor],
-        });
-        //japanese
-        var pc15 = pie.piechart(890,220,10,[4,32,11,953],{
-            colors: [australasiaColor,americaColor,europeColor,africaColor],
+        var a = document.getElementById("earth");
+        a.addEventListener("load",function() {
+            var svgDoc = a.contentDocument;
+            //north african
+            var pc1 = pie.piechart(590,250,10,[150,20,774,56],{
+                colors: [europeColor,africaColor,australasiaColor,americaColor],
             });
-        //atayal
-        var pc16 = pie.piechart(840,260,10,[0,19,5,976],{
-            colors: [australasiaColor,americaColor,europeColor,africaColor],
-        });
-        //south east asian
-        var pc16 = pie.piechart(800,280,10,[36,63,80,822],{
-            colors: [australasiaColor,europeColor,americaColor,africaColor],
-        });
-        //american indian
-        var pc17 = pie.piechart(270,210,10,[37,476,419,67],{
-            colors: [americaColor,europeColor,australasiaColor,africaColor],
-        });
-        //mexican
-        var pc18 = pie.piechart(270,260,10,[56,468,432,44],{
-            colors: [americaColor,europeColor,africaColor,australasiaColor],
+            //puerto rican
+            var pc2 = pie.piechart(330,266,10,[326,88,550,36],{
+                colors: [europeColor,africaColor,americaColor,australasiaColor],
             });
-
+            //north euro
+            var pc3 = pie.piechart(560,150,10,[10,4,970,19],{
+                colors: [europeColor,australasiaColor,africaColor,americaColor],
+            });
+            //irish
+            var pc4 = pie.piechart(505,150,10,[7,17,964,12],{
+                colors: [europeColor,americaColor,australasiaColor,africaColor],
+            });
+            //icelandic
+            var pc5 = pie.piechart(490,110,10,[12,43,938,8],{
+                colors: [europeColor,americaColor,africaColor,australasiaColor],
+            });
+            //greek
+            var pc6 = pie.piechart(590,200,10,[48,47,904,17],{
+                colors: [europeColor,africaColor,americaColor,australasiaColor],
+            });
+            //iberians
+            var pc7 = pie.piechart(498,203,10,[66,107,788,40],{
+                colors: [europeColor,americaColor,africaColor,australasiaColor],
+            });
+            //basque
+            var pc8 = pie.piechart(528,205,10,[23,39,930,8],{
+                colors: [europeColor,americaColor,africaColor,australasiaColor],
+            });
+            //italian
+            var pc9 = pie.piechart(570,205,10,[23,73,868,27],{
+                colors: [europeColor,americaColor,australasiaColor,africaColor],
+            });
+            //turkish
+            var pc10 = pie.piechart(620,210,10,[32,51,853,73],{
+                colors: [europeColor,australasiaColor,americaColor,africaColor],
+            });
+            //ashkenazi
+            var pc11 = pie.piechart(560,180,10,[47,66,868,20],{
+                colors: [europeColor,americaColor,africaColor,australasiaColor],
+            });
+            //mid east
+            var pc12 = pie.piechart(640,240,10,[108,26,820,45],{
+                colors: [europeColor,africaColor,australasiaColor,americaColor],
+            });
+            //south asian indian
+            var pc13 = pie.piechart(730,280,10,[51,91,589,269],{
+                colors: [europeColor,australasiaColor,americaColor,africaColor],
+            });
+            //chinese
+            var pc14 = pie.piechart(800,230,10,[0,13,7,980],{
+                colors: [australasiaColor,americaColor,europeColor,africaColor],
+            });
+            //japanese
+            var pc15 = pie.piechart(890,220,10,[4,32,11,953],{
+                colors: [australasiaColor,americaColor,europeColor,africaColor],
+                });
+            //atayal
+            var pc16 = pie.piechart(840,260,10,[0,19,5,976],{
+                colors: [australasiaColor,americaColor,europeColor,africaColor],
+            });
+            //south east asian
+            var pc16 = pie.piechart(800,280,10,[36,63,80,822],{
+                colors: [australasiaColor,europeColor,americaColor,africaColor],
+            });
+            //american indian
+            var pc17 = pie.piechart(270,210,10,[37,476,419,67],{
+                colors: [americaColor,europeColor,australasiaColor,africaColor],
+            });
+            //mexican
+            var pc18 = pie.piechart(270,260,10,[56,468,432,44],{
+                colors: [americaColor,europeColor,africaColor,australasiaColor],
+                });
+        });
 
         var pc = pie.piechart(130,360,75,vals,{
 colors: [europeColor,americaColor,africaColor,australasiaColor],
