--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
                         </p>
 
                         <p>
-                            I live in and support cooperatives, play classical
+                            I live in and support <a
+                                href="http://chea.niltag.net" target="_blank"
+                                >cooperatives</a>, play classical
                             guitar, and watch a lot of bad movies.
                         </p>
                         <h3>Hire me!</h3>
@@ -251,6 +253,14 @@
                                 music</a></h3>
                         <p>My friend Lacy Rose is a pianist, singer,
                         and burgeoning composer of ghost music.</p>
+                    </div>
+                    <div class="span6">
+                        <h3><a href="http://chea.niltag.net">The new coop I'm
+                                helping to create!!!</a></h3>
+                        <p>Seriously, with help from NASCO Properties my
+                        friends and I are about to create a NEW group-equity
+                        housing cooperative in Austin, TX. Visit the wiki to
+                        find out more!</p>
                     </div>
                 </div>
             </section>
