updated goals; flattr

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
                             <li><a
                                 href="http://gatlin.tumblr.com">tumblr</a></li>
                             <li><a
+                                href="https://flattr.com/profile/gatlin">Flattr</a></li>
+                            <li><a
                                 href="http://www.linkedin.com/in/gatlinjohnson">LinkedIn</a></li>
                             <li><a
                                 href="https://plus.google.com/109219461170636823247">+Gatlin
@@ -130,15 +132,13 @@
                         </p>
 
                         <p>
-                        My goals are to solve meaningful problems that improve
-                        lives. I am not
-                        interested in money as an end. In particular I believe
-                        that careful application of AI
-                        can be used to improve interpersonal relationships,
-                        emergency logistics, and
-                        long-term strategic planning. Or, you know, to make
-                        robots do cool things. I
-                        like robots.
+                        My goals are simple: I want to build applications which
+                        allow people to organize and operate horizontally,
+                        without masters. This means automatic scheduling and
+                        planning, and novel and unique communication and
+                        publication platforms. I also have an interest in
+                        distributed programming and AI - because they're
+                        awesome.
                         </p>
                     </div>
                 </div>
