--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
                             <li><a
                                 href="https://flattr.com/profile/gatlin">Flattr</a></li>
                             <li><a
+                                href="https://www.gittip.com/gatlin/">Gittip</a></li>
+                            <li><a
                                 href="http://www.linkedin.com/in/gatlinjohnson">LinkedIn</a></li>
                             <li><a
                                 href="https://plus.google.com/109219461170636823247">+Gatlin
@@ -103,43 +105,7 @@
 
                 <div class="row">
                     <div class="span12">
-                        <p>
-                        My professional experience begins in the summers of 2004
-                        and 2005 at Lost Pines Scout Reservation as a swimming
-                        and canoeing instructor. To this day nothing I have done
-                        has been more challenging or complicated than getting
-                        children to sit still and listen when they're outside in
-                        the sunshine.
-                        </p>
 
-                        <p>
-                        I enjoy designing and reasoning about software. I have
-                        worked for HostGator.com
-                        as an internal developer, the Texas Department of
-                        Insurance, the occasional
-                        small business, and I take on contract work mostly in
-                        web development. I keep up
-                        to date with tools, ideas, and techniques and try to
-                        have a diverse palette to
-                        draw from when solving a problem.
-                        </p>
-
-                        <p>
-                        Larry Wall is correct: the hallmarks of a good
-                        programmer are laziness,
-                        impatience, and hubris. My goal is to exemplify all
-                        three.
-                        </p>
-
-                        <p>
-                        My goals are simple: I want to build applications which
-                        allow people to organize and operate horizontally,
-                        without masters. This means automatic scheduling and
-                        planning, and novel and unique communication and
-                        publication platforms. I also have an interest in
-                        distributed programming and AI - because they're
-                        awesome.
-                        </p>
                     </div>
                 </div>
             <section id="projects">
