I *have* started the house

--- a/index.html
+++ b/index.html
@@ -221,10 +221,11 @@
                         and burgeoning composer of ghost music.</p>
                     </div>
                     <div class="span6">
-                        <h3><a href="http://chea.niltag.net">The new coop I'm
-                                helping to create!!!</a></h3>
+                        <h3><a href="http://lareunioncoop.org">The cooperative
+                                house I co-founded!</a></h3>
                         <p>Seriously, with help from NASCO Properties my
-                        friends and I are about to create a NEW group-equity
+                        friends and I <strike>are about to create</strike> have
+                        created a NEW group-equity
                         housing cooperative in Austin, TX. Visit the wiki to
                         find out more!</p>
                     </div>
