--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
                         <p>
                             I live in and support <a
                                 href="http://chea.niltag.net" target="_blank"
-                                >cooperatives</a>, play classical
-                            guitar, and watch a lot of bad movies.
+                                >cooperatives</a>, daydream excessively,
+                            and watch a lot of bad movies.
                         </p>
                         <h3>Hire me!</h3>
                         <p>I enjoy designing and making software. If you want
-                        me to make some software, or want to work with me on
-                        something, drop me a line. <a
+                            something automated, optimized, or created from
+                            scratch, drop me a line! <a
                             href="mailto:rokenrol@gmail.com">Drop me a
                             line, I say!</a></p>
                     </div>
@@ -110,17 +110,20 @@
                 </div>
             <section id="projects">
                 <div class="page-header">
-                    <h2>Projects</h2>
+                    <h3>Projects</h3>
                     <p>Not everything, just the public domain stuff and my
                     shameless plug for Vlad.</p>
+                    <strong>I'm reorganizing all this right now.
+                        <a href="https://github.com/gatlin">Check me out on
+                            GitHub for the skinny!</a></strong>
                 </div>
 
                 <div class="row">
-
+                    <!--
                     <div class="span4">
-                        <h3><a
+                        <h4><a
                                 href="http://vladapp.com" target="_blank">
-                                Vlad</a></h3>
+                                Vlad</a></h4>
                         <p>Vlad is an automatic work / labor scheduling system.
                         It guarantees schedules which assign every job,
                         maximize worker preferences, and which don't conflict
@@ -183,46 +186,37 @@
                         particular we will place focus on parallelization.</p>
                         </p>
                     </div>
-
+                -->
                 </div>
             </section>
 
             <section id="links">
                 <div class="page-header">
-                    <h2>Other Interests</h2>
+                    <h2>Other things I care about</h2>
                     <p>I'm not completely dead inside.</p>
                 </div>
 
                 <div class="row">
                     <div class="span6">
-                        <h3><a
-                                href="http://austinfreeskool.wordpress.com">Austin
-                                Free
-                                Skool!</a></h3>
-                        <p>I volunteer with this organization. Free community
-                        education
-                        by and for the community!</p>
-                    </div>
-                    <div class="span6">
-                        <h3><a href="http://lareunioncoop.org">The cooperative
-                                house I co-founded!</a></h3>
+                        <h4><a href="http://lareunioncoop.org">The cooperative
+                                house I co-founded!</a></h4>
                         <p>Seriously, with help from NASCO Properties my
                         friends and I <strike>are about to create</strike> have
                         created a NEW group-equity
                         housing cooperative in Austin, TX. Visit the wiki to
                         find out more!</p>
                     </div>
-                </div>
-                <div class="row">
                     <div class="span6">
-                        <h3><a href="http://lacyrosemusic.com">Lacy Rose
-                                music</a></h3>
+                        <h4><a href="http://lacyrosemusic.com">Lacy Rose
+                                music</a></h4>
                         <p>My friend Lacy Rose is a pianist, singer,
                         and burgeoning composer of ghost music.</p>
                     </div>
+                </div>
+                <div class="row">
                     <div class="span6">
 
-                        <h3><a href="http://nasco.coop">NASCO</a></h3>
+                        <h4><a href="http://nasco.coop">NASCO</a></h4>
                         <p>Cooperation and cooperative living are great
                         solutions to a
                         lot of problems. This website can tell you a lot
