--- a/index.html
+++ b/index.html
@@ -29,9 +29,13 @@
                             <li><a
                                 href="https://github.com/gatlin">GitHub</a></li>
                             <li><a
+                                href="https://twitter.com/gatlin">twitter</a></li>
+                            <li><a
                                 href="http://gatlin.tumblr.com">tumblr</a></li>
+                            <!--
                             <li><a
                                 href="https://flattr.com/profile/gatlin">Flattr</a></li>
+                            -->
                             <li><a
                                 href="https://www.gittip.com/gatlin/">Gittip</a></li>
                             <li><a
