--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <div class="nav-collapse">
                         <ul class="nav">
                             <li><a
-                                href="mailto:rokenrol@gmail.com">rokenrol@gmail.com</a></li>
+                                href="mailto:gatlin@niltag.net">gatlin@niltag.net</a></li>
                             <li><a
                                 href="https://github.com/gatlin">GitHub</a></li>
                             <li><a
@@ -96,7 +96,7 @@
                         <p>I enjoy designing and making software. If you want
                             something automated, optimized, or created from
                             scratch, drop me a line! <a
-                            href="mailto:rokenrol@gmail.com">Drop me a
+                            href="mailto:gatlin@niltag.net">Drop me a
                             line, I say!</a></p>
                     </div>
                 </div>
