--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
                                 href="https://twitter.com/gatlin">twitter</a></li>
                             <li><a
                                 href="http://gatlin.tumblr.com">tumblr</a></li>
+                            <li><a
+                                href="http://instagram.com/gatlincj">Instagram</a></li>
                             <!--
                             <li><a
                                 href="https://flattr.com/profile/gatlin">Flattr</a></li>
