revamp, no time

--- a/index.html
+++ b/index.html
@@ -42,9 +42,6 @@
                                 href="https://www.gittip.com/gatlin/">Gittip</a></li>
                             <li><a
                                 href="http://www.linkedin.com/in/gatlinjohnson">LinkedIn</a></li>
-                            <li><a
-                                href="https://plus.google.com/109219461170636823247">+Gatlin
-                                Johnson</a></li>
                         </ul>
                     </div>
                 </div>
@@ -62,9 +59,8 @@
                 <div class="subnav">
                     <ul class="nav nav-pills">
                         <li><a href="#summary">Summary</a></li>
-                        <li><a href="#about">Details</a></li>
-                        <li><a href="#projects">Projects</a></li>
-                        <li><a href="#links">Other Interests</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="#links">Other links</a></li>
                     </ul>
                 </div>
             </header>
@@ -75,125 +71,85 @@
                 </div>
 
                 <div class="row">
-                    <div class="span3">
-                        <img src="img/gatlin.jpg" class="">
-                    </div>
-                    <div class="span9">
-                        <h3>There's not much to it.</h3>
-                        <p>
-                            I'm a software developer in sunny Austin, TX.
-                            Graduated from UT with my BS in Computer Science. I
-                            do freelance development and hide in academia.
-                            Research interests include machine learning, logic
-                            programming, math education, and vodka.
-                        </p>
+                    <div class="media span12">
+                        <div class="pull-left">
+                            <img src="img/gatlin.jpg"
+                                 style="height:180px;"
+                                 class="hidden-phone">
+                        </div>
+                        <div class="media-body">
+                            <h3 class="media-heading">There's not much to it.</h3>
+                            <p>
+                                I'm a software developer in sunny Austin, TX.
+                                Graduated from UT with my BS in Computer Science. I
+                                do freelance development and aspire to hide in
+                                academia some day. My interests include programming
+                                languages, formal logic, vodka.
+                            </p>
 
-                        <p>
-                            I live in and support <a
-                                href="http://chea.niltag.net" target="_blank"
-                                >cooperatives</a>, daydream excessively,
-                            and watch a lot of bad movies.
-                        </p>
-                        <h3>Hire me!</h3>
-                        <p>I enjoy designing and making software. If you want
-                            something automated, optimized, or created from
-                            scratch, drop me a line! <a
-                            href="mailto:gatlin@niltag.net">Drop me a
-                            line, I say!</a></p>
+                            <p>
+                                I live in and support <a
+                                    href="http://lareunioncoop.org" target="_blank"
+                                    >cooperatives</a>, daydream excessively,
+                                and watch a lot of bad movies.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </section>
 
-            <section id="about">
+            <section id="contact">
                 <div class="page-header">
-                    <h2>Details, details</h2>
+                    <h2>Contact me</h2>
                 </div>
-
+                <address>
                 <div class="row">
-                    <div class="span12">
-
-                    </div>
-                </div>
-            <section id="projects">
-                <div class="page-header">
-                    <h3>Projects</h3>
-                    <p>Not everything, just the public domain stuff and my
-                    shameless plug for Vlad.</p>
-                    <strong>I'm reorganizing all this right now.
-                        <a href="https://github.com/gatlin">Check me out on
-                            GitHub for the skinny!</a></strong>
-                </div>
-
-                <div class="row">
-                    <!--
-                    <div class="span4">
-                        <h4><a
-                                href="http://vladapp.com" target="_blank">
-                                Vlad</a></h4>
-                        <p>Vlad is an automatic work / labor scheduling system.
-                        It guarantees schedules which assign every job,
-                        maximize worker preferences, and which don't conflict
-                        with anyone's availability. It's in a pre-alpha stage
-                        &mdash; sign up for more details!</p>
-                    </div>
-
-                    <div class="span4">
-                        <h3><a
-                                href="https://github.com/gatlin/Saturn">Saturn</a></h3>
-                        <p>A concurrent network SAT solver written in Go, based
-                        on MiniSAT. Pretty simple at the moment. Future plans
-                        involve parallelizing SAT instances to take advantage
-                        of all those pretty CPU cores you got there.</p>
-                    </div>
-
-                    <div class="span4">
-                        <h3><a
-                                href="https://github.com/gatlin/go-orc">go-orc</a></h3>
-                        <p>A distributed computing and concurrency calculus,
-                        based on work from UT Austin, implemented in Go.
-                        Deceptively simple but potentially quite powerful.
-                        It was written while I was brainstorming
-                        parallelization techniques for Saturn.
+                    <div class="span3 well">
+                        <h3>Email</h3>
+                        <p>
+                            <a
+                                href="mailto:gatlin@niltag.net">gatlin@niltag.net</a>
                         </p>
                     </div>
-
-                </div>
-                <div class="row">
-
-                    <div class="span4">
-                        <h3><a
-                                href="https://github.com/gatlin/cartograder">CartoCritic</a></h3>
-                        <p>This is a tool created for Texas A&amp;M Corpus
-                        Christi for use in the GIS / geospatial engineering
-                        classes. It allows students to submit maps for
-                        anonymous peer review and grade each other. It's not
-                        quite complete - I'm not sure yet how I want
-                        authentication to work - but it's handy
-                        nonetheless.</p>
+                    <div class="span3 well">
+                        <h3>XMPP</h3>
+                        <p>gatlin@niltag.net</p>
                     </div>
-
-                    <div class="span4">
-                        <h3><a
-                                href="https://github.com/gatlin/surely">Surely</a></h3>
-                        <p>A SAT solving algorithm written in Haskell. This was
-                        my attempt at understanding DPLL. I'd like to extend
-                        this with clause learning and backjumping, optimize the
-                        hell out of it, and put it on Hackage. Hacker News
-                        liked it?</p>
-                    </div>
-
-                    <div class="span4">
-                        <h3><a
-                                href="https://github.com/alpmestan/hnn">HNN</a></h3>
-                        <p><em>Under major construction!</em></p>
-                        <p>The Haskell Neural Network library. Under
-                        construction! The goal is to produce the fastest neural
-                        net library this side of the Mississippi. In
-                        particular we will place focus on parallelization.</p>
+                    <div class="span3 well">
+                        <h3>Twitter</h3>
+                        <p>
+                            <a
+                                href="https://twitter.com/gatlin">@gatlin</a>
                         </p>
                     </div>
-                -->
                 </div>
+                <div class="row">
+                    <div class="span3 well">
+                        <h3>Tumblr</h3>
+                        <p>
+                            <a
+                                href="http://gatlin.tumblr.com">
+                                My fascinating blog</a>
+                        </p>
+                    </div>
+                    <div class="span3 well">
+                        <h3>Instagram</h3>
+                        <p>
+                            <a
+                                href="http://instagram.com/gatlincj">
+                                @gatlincj</a>
+                        </p>
+                    </div>
+                    <div class="span3 well">
+                        <h3>GitHub</h3>
+                        <p>
+                            <a
+                                href="https://github.com/gatlin">
+                                @gatlin</a>
+                        </p>
+                    </div>
+                </div>
+            </address>
             </section>
 
             <section id="links">
